--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -89,6 +94,60 @@ src="./images/team-3.jpg"
         height="260">
         <h3>Daniel Wilson</h3>
 <p>UI Designer</p>
+    </li>
+</ul>
+
+        </section>
+        <section>
+<h2>Our Portfolio</h2>
+<ul>
+    <li>
+        <img src="./images/Portfolio-1.jpg"
+         alt="Banking photo"
+         width="360"
+        height="300">
+        <h3>Banking App</h3>
+        <p>App</p>
+    </li>
+    <li>
+        <img src="./images/Portfolio-2.jpg" 
+        alt="Cashless photo"
+        width="360"
+        height="300">
+        <h3>Cashless Payment</h3>
+        <p>Marketing</p>
+    </li>
+    <li>
+        <img src="./images/Portfolio-3.jpg"
+         alt="Meditation photo"
+         width="360"
+        height="300">
+        <h3>Meditation App</h3>
+        <p>App</p>
+    </li>
+    <li>
+        <img src="./images/Portfolio-4.jpg"
+         alt="Taxi photo"
+         width="360"
+         height="300">
+        <h3>Taxi Service</h3>
+        <p>Marketing</p>
+    </li>
+    <li>
+        <img src="./images/Portfolio-5.jpg" 
+        alt="Screen photo"
+        width="360"
+        height="300">
+        <h3>Screen Illustrations</h3>
+        <p>Design</p>
+    </li>
+    <li>
+        <img src="./images/Portfolio-6.jpg" 
+        alt="Online photo"
+        width="360"
+        height="300">
+        <h3>Online Courses</h3>
+        <p>Marketing</p>
     </li>
 </ul>
 
