--- a/index.html
+++ b/index.html
@@ -11,151 +11,157 @@
 
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="header-link">
+        <a class="header-item" href="./index.html">Web<span class="header-logo">Studio</span></a>
+            <ul class="header-list">
+                <li class="header-item"><a href="">Studio</a></li>
+                <li class="header-item"><a href="">Portfolio</a></li>
+                <li class="header-item"><a href="">Contacts</a></li>
             </ul>
  </nav>
-<address>
-    <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a>></li>
+<address class="header-address">
+    <ul class="header-address-list">
+        <li class="header-address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a>></li>
     </ul>
 
 </address>
 </header>
-    <main>
-        <section>
-            <h1>Effective Solutions
+    <main class="main">
+        <section class="section-box">
+            <h1 class="box-title">Effective Solutions
                 for Your Business</h1>
-                <button type=button>Order Service</button>
+                <button class="box-button" button>Order Service</button>
         </section>
-        <section>
+        <section class="section-information">
             <h2>Benefits</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+            <ul class="information-list">
+                <li class="information-item">
+                    <h3 class="information-title">Strategy</h3>
+                    <p class="information-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="information-item">
+                    <h3 class="information-title">Punctuality</h3>
+                    <p class="information-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
+                <li class="information-item">
+                    <h3 class="information-title">Diligence</h3>
+                    <p class="information-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="information-item">
+                    <h3 class="information-title">Technologies</h3>
+                    <p class="information-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-<h2>Our Team</h2>
-<ul>
-    <li>
-        <img 
+        <section class="section-hero">
+<h2 class="hero-title">Our Team</h2>
+<ul class="hero-list">
+    <li class="hero-item">
+        <img class="hero-photo"
         src="./images/team-1.jpg" 
         alt="Mark photo"
         width="264"
         height="260">
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
+        <h3 class="hero-subtitle">Mark Guerrero</h3>
+        <p class="hero-text">Product Designer</p>
     </li>
-    <li>
-<img 
+    <li class="hero-item">
+<img class="hero-photo"
 src="./images/team-2.jpg"
  alt="Tom photo"
  width="264"
         height="260">
-<h3>Tom Ford</h3>
-<p>Frontend Developer</p>
+<h3 class="hero-subtitle">Tom Ford</h3>
+<p class="hero-text">Frontend Developer</p>
     </li>
-    <li>
-        <img 
+    <li class="hero-item">
+        <img class="hero-photo"
 src="./images/team-3.jpg"
  alt="Camila photo"
  width="264"
         height="260">
-        <h3>Camila Garcia</h3>
-<p>Marketing</p>
+        <h3 class="hero-subtitle">Camila Garcia</h3>
+<p class="hero-text">Marketing</p>
     </li>
-    <li>
-        <img 
+    <li class="hero-item">
+        <img class="hero-photo"
         src="./images/team-4.jpg" 
         alt="Daniel photo"
         width="264"
         height="260">
-        <h3>Daniel Wilson</h3>
-<p>UI Designer</p>
+        <h3 class="hero-subtitle">Daniel Wilson</h3>
+<p class="hero-text">UI Designer</p>
     </li>
 </ul>
 
         </section>
-        <section>
-<h2>Our Portfolio</h2>
-<ul>
-    <li>
-        <img src="./images/Portfolio-1.jpg"
+        <section class="section-portfolio">
+<h2 class="portfolio-title">Our Portfolio</h2>
+<ul class="portfolio-list">
+    <li class="portfilio-item">
+        <img class="portfolio-photo" 
+         class="portfolio-text"src="./images/Portfolio-1.jpg"
          alt="Banking photo"
          width="360"
         height="300">
-        <h3>Banking App</h3>
-        <p>App</p>
+        <h3 class="portfolio-subtitle">Banking App</h3>
+        <p class="portfolio-text">App</p>
     </li>
-    <li>
-        <img src="./images/Portfolio-2.jpg" 
+    <li class="portfilio-item">
+        <img class="portfolio-photo" 
+        src="./images/Portfolio-2.jpg" 
         alt="Cashless photo"
         width="360"
         height="300">
-        <h3>Cashless Payment</h3>
-        <p>Marketing</p>
+        <h3 class="portfolio-subtitle">Cashless Payment</h3>
+        <p class="portfolio-text">Marketing</p>
     </li>
-    <li>
-        <img src="./images/Portfolio-3.jpg"
+    <li class="portfilio-item">
+        <img class="portfolio-photo" 
+        src="./images/Portfolio-3.jpg"
          alt="Meditation photo"
          width="360"
         height="300">
-        <h3>Meditation App</h3>
-        <p>App</p>
+        <h3 class="portfolio-subtitle">Meditation App</h3>
+        <p class="portfolio-text">App</p>
     </li>
-    <li>
-        <img src="./images/Portfolio-4.jpg"
+    <li class="portfilio-item">
+        <img class="portfolio-photo" 
+        src="./images/Portfolio-4.jpg"
          alt="Taxi photo"
          width="360"
          height="300">
-        <h3>Taxi Service</h3>
-        <p>Marketing</p>
+        <h3 class="portfolio-subtitle">Taxi Service</h3>
+        <p class="portfolio-text">Marketing</p>
     </li>
-    <li>
-        <img src="./images/Portfolio-5.jpg" 
+    <li class="portfilio-item">
+        <img class="portfolio-photo" 
+        src="./images/Portfolio-5.jpg" 
         alt="Screen photo"
         width="360"
         height="300">
-        <h3>Screen Illustrations</h3>
-        <p>Design</p>
+        <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+        <p class="portfolio-text">Design</p>
     </li>
-    <li>
-        <img src="./images/Portfolio-6.jpg" 
+    <li class="portfilio-item">
+        <img class="portfolio-photo" 
+        src="./images/Portfolio-6.jpg" 
         alt="Online photo"
         width="360"
         height="300">
-        <h3>Online Courses</h3>
-        <p>Marketing</p>
+        <h3 class="portfolio-subtitle">Online Courses</h3>
+        <p class="portfolio-text">Marketing</p>
     </li>
 </ul>
 
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
