--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header class="header">
-        <nav class="header-link">
-        <a class="header-item" href="./index.html">Web<span class="header-logo">Studio</span></a>
+        <nav class="header-navigation">
+        <a class="header-link" href="./index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="header-list">
                 <li class="header-item"><a href="">Studio</a></li>
                 <li class="header-item"><a href="">Portfolio</a></li>
@@ -35,7 +35,7 @@
                 <button class="box-button" button>Order Service</button>
         </section>
         <section class="section-information">
-            <h2>Benefits</h2>
+            <h2 hidden>Benefits</h2>
             <ul class="information-list">
                 <li class="information-item">
                     <h3 class="information-title">Strategy</h3>
