--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <section class="section-box">
             <h1 class="box-title">Effective Solutions
                 for Your Business</h1>
-                <button class="box-button" button>Order Service</button>
+                <button type="button" 
+                class="box-btn">Order Service</button>
         </section>
         <section class="section-information">
             <h2 hidden>Benefits</h2>
@@ -110,7 +111,7 @@ src="./images/team-3.jpg"
 <ul class="portfolio-list">
     <li class="portfilio-item">
         <img class="portfolio-photo" 
-         class="portfolio-text"src="./images/Portfolio-1.jpg"
+         src="./images/Portfolio-1.jpg"
          alt="Banking photo"
          width="360"
         height="300">
