--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <nav class="header-navigation">
         <a class="header-link" href="./index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="header-list">
-                <li class="header-item"><a href="">Studio</a></li>
-                <li class="header-item"><a href="">Portfolio</a></li>
-                <li class="header-item"><a href="">Contacts</a></li>
+                <li class="header-item"><a href="./index.html">Studio</a></li>
+                <li class="header-item"><a href="./index.html">Portfolio</a></li>
+                <li class="header-item"><a href="./index.html">Contacts</a></li>
             </ul>
  </nav>
 <address class="header-address">
