--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <nav class="header-navigation">
         <a class="header-link" href="./index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="header-list">
-                <li class="header-item"><a href="./index.html">Studio</a></li>
-                <li class="header-item"><a href="./index.html">Portfolio</a></li>
-                <li class="header-item"><a href="./index.html">Contacts</a></li>
+                <li class="header-item"><a class="header-item-link" href="">Studio</a></li>
+                <li class="header-item"><a class="header-item-link" href="">Portfolio</a></li>
+                <li class="header-item"><a class="header-item-link" href="">Contacts</a></li>
             </ul>
  </nav>
 <address class="header-address">
     <ul class="header-address-list">
-        <li class="header-address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="header-address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a>></li>
+        <li class="header-address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header-address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>></li>
     </ul>
 
 </address>
