--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a class="header-link" href="./index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="header-list">
                 <li class="header-item"><a class="header-item-link" href="./index.html">Studio</a></li>
-                <li class="header-item"><a class="header-item-link" href="./index.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-item-link" href="./index.html">Contacts</a></li>
+                <li class="header-item"><a class="header-item-link" href="">Portfolio</a></li>
+                <li class="header-item"><a class="header-item-link" href="">Contacts</a></li>
             </ul>
  </nav>
 <address class="header-address">
